k8s/maximoui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maximoui-service
spec:
  selector:
    app: maximoui
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  type: LoadBalancer
