k8s/sql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-server-service
spec:
  selector:
    app: max761-local
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
