k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sql-server
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          #serviceName: sql-server-service
          #servicePort: 1433
          service:
            name: sql-server-service
            port:
              number: 1433
